# context_manager

./: .gitignore  README.md  pyproject.toml
context_logger/: __init__.py  context_logger.py  context_logger_factory.py
examples/: current.py  loguru_basic.py  loguru_recommended.py
tests/: test_context_logger.py  test_context_logger_factory.py
